Complete fixed nav stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,11 @@ p {
   margin: 0 auto;
 }
 nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.95;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -201,6 +206,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 10rem;
 }
 .home .intro .img-wrapper img {
   max-width: 100%;
