--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,10 @@
 // Navigation code here
 nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.95;
   .flex(@direction: column);
   padding: 1.4rem 0 1rem;
   background: @nav-bg;
